[tool.poetry]
name = "layout-verstka-1-prodayom-elitnoe-vino"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "3.1.2"
openpyxl = "3.1.2"
pandas = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
